src/objects/CSPOFA__Orchestration_Process_Template__c.object
<CustomObject>
    <fields>
        <fullName>CSPOFA__Associated_Profile__c</fullName>
        <label>Associated Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSPOFA__OLA_Activity_Linked_By__c</fullName>
        <description>Defines a record that is used to link with OLA Activity Definition. In case of Scheduler integration Calendar represents OLA Activity Definition</description>
        <inlineHelpText>Defines data that is used as key for Activity Definition selection through Data Links</inlineHelpText>
        <label>OLA Activity Linked By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSPOFA__OLA_Time__c</fullName>
        <description>The time amount for the process to finish before it goes into jeopardy.</description>
        <inlineHelpText>The time amount for the process to finish before it goes into jeopardy.</inlineHelpText>
        <label>OLA Time</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSPOFA__OLA_Unit__c</fullName>
        <description>Defines process level OLA unit.</description>
        <inlineHelpText>OLA unit on process level: day, hour, minute. If not defined the minute unit is used.</inlineHelpText>
        <label>OLA Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSPOFA__Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Low</fullName>
                </value>
                <value>
                    <fullName>2 - Normal</fullName>
                    <default>true</default>
                    <label>2 - Normal</label>
                </value>
                <value>
                    <fullName>3 - High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSPOFA__Process_Label__c</fullName>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSPOFA__Process_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Provide</fullName>
                </value>
                <value>
                    <fullName>Upgrade/Downgrade</fullName>
                </value>
                <value>
                    <fullName>Cease</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSPOFA__Processing_Mode__c</fullName>
        <description>Internal field for storing processing mode information</description>
        <externalId>true</externalId>
        <label>Processing Mode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_DecompositionCriteria__c</fullName>
        <description>Used as a criteria for grouping the services to the suborders</description>
        <label>Decomposition Criteria</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LG_DecompositionCriteria</valueSetName>
        </valueSet>
    </fields>
    <label>Orchestration Process Template</label>
    <listViews>
        <fullName>CSPOFA__All</fullName>
        <columns>NAME</columns>
        <columns>CSPOFA__Process_Label__c</columns>
        <columns>CSPOFA__Process_Type__c</columns>
        <columns>LG_DecompositionCriteria__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>CSPOFA__Processing_Mode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Order_Management_Orchestration_Process_Template</fullName>
        <filterScope>Queue</filterScope>
        <label>Order Management</label>
        <queue>Order_Management</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orchestration Process Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>